--- a/hang_server/Views/Home/Index.cshtml
+++ b/hang_server/Views/Home/Index.cshtml
@@ -9,5 +9,6 @@
 <div>
     <p>文件服务中心:<a href="~/image">文件中转站</a>.</p>
     <p><a href="~/MyFiles">文件下载列表</a>.</p>
+    <p>音频处理页面:<a href="~/audio">音频处理页面</a>.</p>
 </div>
 
